--- a/.gitignore
+++ b/.gitignore
@@ -369,6 +369,11 @@ tags
 [._]*.un~
 
 ### VisualStudioCode ###
+.vscode
+.vscode/
+*tempCodeRunnerFile
+tempCodeRunnerFile
+^tempCodeRunnerFile
 .vscode/*
 !.vscode/tasks.json
 !.vscode/launch.json
